--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>
     </div>
         <form class="landingpage">
-            <img src="./images/iniciar_title.jpg">
+            <img src="./images/iniciar_title.png">
 
             <label class="input__label label-name hidden">
                 Nombre
@@ -29,7 +29,7 @@
                 Contraseña
                     <input class="input" type="password" placeholder="Ingresa una contraseña" name="password" required>
             </label>
-                <img src="./images/iniciar_btn.jpg">
+                <img src="./images/iniciar_btn.png">
 
             <button class="button button--width button-login" type="submit">Iniciar Sesión</button>
         </form>
