registro y login listo

--- a/index.html
+++ b/index.html
@@ -14,59 +14,13 @@
     <div class="landingpage__background">
 
         <img class="landingpage__logo" src="./images/logo.png">
-        <div>
+        <div class="landingpage__btn">
             <input type="button" class="landingpage__btn--start buttonStart">
             <input type="button" class="landingpage__btn--register buttonRegister">
         </div>
     </div>
     </section>
 
-    <section class="login hidden">
-
-        <form class="landingpage">
-            <img src="./images/iniciar_title.png">
-
-            <label class="input__label">
-                Correo
-                <input class="input" type="Email" placeholder="Ingresa un correo" name="email" required>
-            </label>
-
-            <label class="input__label">
-                Contraseña
-                    <input class="input" type="password" placeholder="Ingresa una contraseña" name="password" required>
-            </label>
-                <img src="./images/iniciar_btn.png">
-
-                <input type="button" class="landingpage__btn--register buttonRegister">
-            </form>
-
-    </section>
-
-    <section class="register hidden">
-
-        <form class="landingpage">
-            <img src="./images/datos_title.png">
-
-            <label class="input__label label-name">
-                Nombre
-                <input class="input name" type="text" placeholder="Ingresa un nombre" name="name">
-            </label>
-
-            <label class="input__label">
-                Correo
-                <input class="input" type="Email" placeholder="Ingresa un correo" name="email" required>
-            </label>
-
-            <label class="input__label">
-                Contraseña
-                    <input class="input" type="password" placeholder="Ingresa una contraseña" name="password" required>
-            </label>
-                <img src="./images/iniciar_btn.png">
-
-                <input type="button" class="landingpage__btn--register buttonRegister">
-            </form>
-
-    </section>
     
 </body>
 <script type="module" src="./scripts/index.js"></script>
