subido el commit

--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,19 +9,23 @@
     <link rel="stylesheet" href="./css/main.css">
 
 </head>
+
 <body>
 
-    <section class="cap landingpage__background--credentials">
+    <section class="hidden cap landingpage__background--credentials">
 
-        <img src="./images/cap_title.png">
-        <div>
-            <img src="./images/cover_cap1.png">
-            <img src="./images/next_arrow.png.png">
+        <div class="">
+            <img src="./images/cap_title.png">
+            <div>
+                <img src="./images/cover_cap1.png">
+                <img src="./images/next_arrow.png.png">
+            </div>
+            <img class="startCap" src="images/leer_orange_btn.png">
 
         </div>
-        <img src ="images/leer_orange_btn.png">
-
     </section>
-    
+
+
 </body>
+<script type="module" src="./scripts/main.js"></script>
 </html>
