--- a/cap1.html
+++ b/cap1.html
@@ -13,7 +13,7 @@
     <section class="comic commit_cap1">
         <img class="comic--arrow" src="./images/previous_arrow.png">
         <div class="comic--page"></div>
-        <img class="comic--arrow" src="./images/next_arrow.png.png">
+        <img class="comic--arrow next" src="./images/next_arrow.png.png">
 
     </section>
     
