--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Capitulo 1</title>
     <link rel="stylesheet" href="./css/main.css">
 
 </head>
@@ -14,7 +14,7 @@
 
     <section class="hidden cap landingpage__background--credentials">
 
-        <div class="">
+        <div class="landingpage__btn">
             <img src="./images/cap_title.png">
             <div>
                 <img src="./images/cover_cap1.png">
