--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="landingpage__background">
 
         <img class="landingpage__logo" src="./images/logo.png">
-        <div class="landingpage__btn">
+        <div>
             <input type="button" class="landingpage__btn--start buttonStart">
             <input type="button" class="landingpage__btn--register buttonRegister">
         </div>
