--- a/main.html
+++ b/main.html
@@ -12,17 +12,16 @@
 
 <body>
 
-    <section class="hidden cap landingpage__background--credentials">
+    <section class=" landingpage__caps">
 
-        <div class="landingpage__btn">
-            <img src="./images/cap_title.png">
-            <div>
-                <img src="./images/cover_cap1.png">
-                <img src="./images/next_arrow.png.png">
-            </div>
-            <img class="startCap" src="images/leer_orange_btn.png">
-
+        <div class="landingpage__cap" >
+            <div class="landingpage__title"></div>
+            <img class="landingpage__cover" src="./images/cover_cap1.png">
+            <div class="startCap landingpage__btn--read" ></div>
         </div>
+        
+        <div class="landingpage__arrow"></div>
+
     </section>
 
 
